force-app/main/default/objects/FormaDistribuicao__c/FormaDistribuicao__c.object-meta.xml
<CustomObject>
    <description>Utilizado para gerenciar o processo de distribuição dos leads. Possui os campos quantidade atual, que reflete a quantidade de leads que já foram direcionados a um tipo de carteira, e quantidade máxima, que é o limite definido para mudança do destinatário dos leads.</description>
    <label>Forma de distribuição</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formas de distribuição</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>