force-app/main/default/objects/FormaDistribuicao__c/fields/Objeto__c.field-meta.xml
<CustomField>
    <fullName>Objeto__c</fullName>
    <description>Especifica o objeto que o processo está relacionado.</description>
    <label>Objeto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>