force-app/main/default/objects/FormaDistribuicao__c/fields/Priorizar__c.field-meta.xml
<CustomField>
    <fullName>Priorizar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quando selecionado, a loja sempre receberá visita independente dos valores de &quot;Quantidade atual&quot; e &quot;Quantidade permitida&quot;.</description>
    <inlineHelpText>Quando selecionado, a loja sempre receberá visita independente dos valores de &quot;Quantidade atual&quot; e &quot;Quantidade permitida&quot;.</inlineHelpText>
    <label>Priorizar</label>
    <type>Checkbox</type>
</CustomField>