force-app/main/default/objects/FormaDistribuicao__c/fields/Processo__c.field-meta.xml
<CustomField>
    <fullName>Processo__c</fullName>
    <description>Especifica o processo que o registro está relacionado</description>
    <label>Processo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>