force-app/main/default/objects/FormaDistribuicao__c/fields/QuantidadeAtual__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAtual__c</fullName>
    <label>Quantidade atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>