force-app/main/default/objects/FormaDistribuicao__c/fields/QuantidadePermitida__c.field-meta.xml
<CustomField>
    <fullName>QuantidadePermitida__c</fullName>
    <label>Quantidade permitida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>