force-app/main/default/objects/FormaDistribuicao__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>QuantidadeAtual__c</columns>
    <columns>QuantidadePermitida__c</columns>
    <columns>Priorizar__c</columns>
    <columns>Processo__c</columns>
    <columns>Objeto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>